fake user-agent and add transparency

--- a/config.yaml
+++ b/config.yaml
@@ -16,6 +16,11 @@ templates:
         processors:
           - !reportBuilder # compile all reports in current directory
             directory: '.'
+          - !configureHttpRequests
+            httpProcessors:
+              - !addHeaders
+                headers:
+                  User-Agent: "Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:42.0) Gecko/20100101 Firefox/42.0"
           - !createDataSource
             processors:
               - !createMap {}
