--- a/config.yaml
+++ b/config.yaml
@@ -26,3 +26,28 @@ templates:
           - !createDataSource
             processors:
               - !createMap {}
+    A4 landscape: !template
+        reportTemplate: A4_Landscape.jrxml
+        tableData: jrDataSource
+        attributes:
+            title: !string {}
+            subtitle: !string {}
+            legendURL: !string
+              default: ""
+            datasource: !datasource
+                attributes:
+                    map: !map
+                        maxDpi: 254
+                        width: 590
+                        height: 480
+        processors:
+          - !reportBuilder # compile all reports in current directory
+            directory: '.'
+          - !configureHttpRequests
+            httpProcessors:
+              - !addHeaders
+                headers:
+                  User-Agent: "Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:42.0) Gecko/20100101 Firefox/42.0"
+          - !createDataSource
+            processors:
+              - !createMap {}
