--- a/config.yaml
+++ b/config.yaml
@@ -62,9 +62,34 @@ templates:
             datasource: !datasource
                 attributes:
                     map: !map
-                        maxDpi: 254
+                        maxDpi: 350
                         width: 800
                         height: 937
+        processors:
+          - !reportBuilder # compile all reports in current directory
+            directory: '.'
+          - !configureHttpRequests
+            httpProcessors:
+              - !addHeaders
+                headers:
+                  User-Agent: "Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:42.0) Gecko/20100101 Firefox/42.0"
+          - !createDataSource
+            processors:
+              - !createMap {}
+    A3 landscape: !template
+        reportTemplate: A3_Landscape.jrxml
+        tableData: jrDataSource
+        attributes:
+            title: !string {}
+            subtitle: !string {}
+            legendURL: !string
+              default: ""
+            datasource: !datasource
+                attributes:
+                    map: !map
+                        maxDpi: 350
+                        width: 890
+                        height: 729
         processors:
           - !reportBuilder # compile all reports in current directory
             directory: '.'
